--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - static_volume:/usr/src/app/static
     ports:
       - 8000:80
-    depends_on:d
+    depends_on:
       - web
 volumes:
   static_volume:
